--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
         <title>Draggable table example</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <style>
-
+p {
+    font: sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+}
         </style>
     </head>
     <body>
+        <p>Drag and drop rows in the table.</p>
         <table cellspacing="0"></table>
         <div id="logs">
         </div>
