added grunt file and node settings

--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Draggable table example</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/draggable-table.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
         <style>
-p {
-    font: sans-serif;
-    font-size: 24px;
-    font-weight: bold;
-}
         </style>
     </head>
     <body>
         <p>Drag and drop rows in the table.</p>
         <table cellspacing="0"></table>
-        <div id="logs">
+        <div class="logs">
         </div>
         <script type="text/javascript" src="js/draggable-table.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
